<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#F6F6F6">

    <ImageView
        android:id="@+id/corner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cornerup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:flow_horizontalAlign="start"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack_ly1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ActionButton"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/middle_circle1"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:src="@drawable/middle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/cornerb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cornerbelow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:flow_horizontalAlign="end"/>

    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bglayout"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:elevation="4dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/gambar_logo"/>
        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:fontFamily="@font/poppinssemibold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Sign up Account"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:layout_gravity="center"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:backgroundTint="@color/primary"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="8dp"
                    android:hint="Input Email"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_email_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:backgroundTint="@color/primary"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="0dp"
                    android:hint="Create Username"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_user_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:backgroundTint="@color/primary"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="0dp"
                    android:hint="Create Password"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock_24"
                    app:endIconMode="password_toggle">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:backgroundTint="@color/primary"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="0dp"
                    android:hint="Confirm Password"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock_24"
                    app:endIconMode="password_toggle">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_tanggal_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:focusable="false"
                    android:clickable="true"
                    android:backgroundTint="@color/primary"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="0dp"
                    android:hint="Tanggal Lahir (MM/dd/yyyy)"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_calendar_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttgllahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_tlp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:backgroundTint="@color/primary"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="0dp"
                    android:hint="No. Telepon"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_call_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttlp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.Material3.Button"
            android:text="Register"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/det_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Already have an account?"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"
            android:layout_gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="18sp"
            android:text="Sign in"
            android:textColor="@color/primary"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>