...
    <string name="deshelp">Customer service kami tersedia setiap hari selama 24 jam tanpa istirahat</string>
    <string name="qahelp">Apakah ini Masalah yang anda temui?</string>
    <string name="qa1">Paket yang mau dikirim belum diambil</string>
    <string name="qa2">Pengembalian barang tidak diproses</string>
    <string name="qa3">Paket Tidak Sampai-sampai</string>
    <string name="wamessage">Hi, Customer Service myCourier, Saya ingin mengajukan pertanyaan mengenai paket saya pada aplikasi MyCourier, \n\nNo Resi: \nNama: \nNomor \nTlp: \nTgl: \nDetails: </string>
    <string name="cs">085669865451</string>
    <string-array name="kotaPenerima">
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Solo</item>
        <item>Klaten</item>
        <item>Wonosobo</item>
...
